# genetic-algorithm-for-mineral-extraction

./: CMakeLists.txt  LICENSE  Makefile  README.md  a.out  run_tests.py
Visualisation/: Visualisation.ipynb  tex_res.txt
Visualisation/Ani_images/: res_000  res_001  res_002  res_003  res_004  res_005  res_006  res_007  res_008  res_009  res_010  res_011  res_012  res_013  res_014  res_015  res_016  res_017  res_018  res_019  res_020  res_021  res_022  res_023  res_024  res_025  res_026  res_027  res_028
analysis/: analysis.tex
documentation/html/: _c_circuit_8h_source.html  _c_unit_8h_source.html  _genetic___algorithm_8h_source.html  annotated.html  class_c_circuit-members.html  class_c_circuit.html  class_c_unit-members.html  class_c_unit.html  classes.html  classsolution-members.html  classsolution.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html
documentation/html/search/: all_0.js  all_2.js  all_3.js  all_6.js  all_9.js  classes_0.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  searchdata.js  variables_0.js
documentation/latex/: _c_circuit_8h_source.tex  _c_unit_8h_source.tex  _genetic___algorithm_8h_source.tex  annotated.tex  class_c_circuit.tex  class_c_unit.tex  classsolution.tex  files.tex  refman.tex
includes/: CCircuit.h  CUnit.h  Genetic_Algorithm.h
src/: CCircuit.cpp  CUnit.cpp  Genetic_Algorithm.cpp  a.out  main.cpp  penmp
tests/: test1.cpp
workflows/: build_documentation  run_tests.yml
